# langgraph-agent-template

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.ui-prod.yml  docker-compose.yml  langgraph.json  pyproject.toml  services.sh  setup.sh  start.sh
agent/: config.py  graph.py  prompts.py  summarization.py
agent-chat-ui/: .dockerignore  .gitignore  Dockerfile  package-lock.json
agent/mcp_integration/: config.py  servers.yaml
chat-ui/: .env.example  package-lock.json
cli/: agent.py
infra/langsmith/: config.py  datasets.py  evaluators.py  runner.py  target.py
infra/langsmith/examples/: sample_dataset.yaml
patches/: ui-speed-mcp.patch
scripts/: run_evaluation.py
tests/: test_agent.py
